--- a/common-test/build.gradle
+++ b/common-test/build.gradle
@@ -26,7 +26,7 @@ spotless {
         target 'src/*/java/**/*.java'
         importOrder()
         removeUnusedImports()
-        googleJavaFormat('1.7')
+        googleJavaFormat(googleJavaFormatVersion)
     }
 }
 
