--- a/generic-contracts/build.gradle
+++ b/generic-contracts/build.gradle
@@ -6,11 +6,11 @@ plugins {
 sourceSets {
     integrationTest {
         java {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
             srcDir file('src/integration-test/java')
         }
         resources.srcDir file('src/integration-test/resources')
+        compileClasspath += sourceSets.main.output + sourceSets.test.output
+        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
     }
 }
 
@@ -52,7 +52,7 @@ spotless {
         target 'src/*/java/**/*.java'
         importOrder()
         removeUnusedImports()
-        googleJavaFormat('1.7')
+        googleJavaFormat(googleJavaFormatVersion)
     }
 }
 
@@ -76,7 +76,7 @@ spotbugsTest.reports {
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
@@ -87,4 +87,9 @@ distZip {
         include 'conf/**'
         include 'build/classes/java/main/**'
     }
+    mustRunAfter tasks.named('compileIntegrationTestJava')
+}
+
+distTar {
+    mustRunAfter tasks.named('compileIntegrationTestJava')
 }
