--- a/ledger/build.gradle
+++ b/ledger/build.gradle
@@ -18,8 +18,6 @@ sourceSets {
             srcDir file('src/integration-test/java')
         }
         resources.srcDir file('src/integration-test/resources')
-        compileClasspath += sourceSets.main.output + sourceSets.test.output
-        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
     }
 
     // Everything below has been added as there is a bug in Gradle that prevents us from
@@ -30,8 +28,6 @@ sourceSets {
             srcDir file('src/permission-test/java')
         }
         resources.srcDir file('src/permission-test/resources')
-        compileClasspath += sourceSets.main.output + sourceSets.test.output
-        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
     }
 }
 
@@ -41,6 +37,7 @@ configurations {
     integrationTestCompileOnly.extendsFrom testCompileOnly
     permissionTestImplementation.extendsFrom testImplementation
     permissionTestRuntimeOnly.extendsFrom testRuntimeOnly
+    permissionTestCompileOnly.extendsFrom testCompileOnly
 }
 
 dependencies {
@@ -55,7 +52,11 @@ dependencies {
 
     testImplementation group: 'com.scalar-labs', name: 'scalardb-schema-loader', version: "${scalarDbVersion}"
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: "${junitVersion}"
+    integrationTestImplementation sourceSets.main.output
+    integrationTestImplementation sourceSets.test.output
     integrationTestImplementation project(':common-test')
+    permissionTestImplementation sourceSets.main.output
+    permissionTestImplementation sourceSets.test.output
 
     // for Error Prone
     errorprone "com.google.errorprone:error_prone_core:${errorproneVersion}"
