--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 ext {
     projectGroup = 'com.scalar-labs'
-    projectVersion = '3.13.0-SNAPSHOT'
+    projectVersion = project.findProperty('projectVersion') ?: '3.13.0-SNAPSHOT'
 }
 
 group = projectGroup
@@ -118,6 +118,31 @@ subprojects {
     task dockerfileLint(type: Exec) {
         description 'Lint the Dockerfile'
         executable "${rootDir}/scripts/docker/lint.sh"
+    }
+
+    // Configure publishing repositories for all subprojects using maven-publish plugin
+    plugins.withType(MavenPublishPlugin).configureEach {
+        def isFeatureSnapshot = (project.version.toString() =~ /^\d+\.\d+\.\d+-feature-.+-SNAPSHOT$/).matches()
+
+        publishing {
+            repositories {
+                if (isFeatureSnapshot) {
+                    maven {
+                        name = 'GitHubPackages'
+                        url = uri('https://maven.pkg.github.com/scalar-labs/scalardl')
+                        credentials {
+                            username = project.findProperty('gprUsername') ?: System.getenv('GPR_USERNAME')
+                            password = project.findProperty('gprPassword') ?: System.getenv('GPR_PASSWORD')
+                        }
+                    }
+                } else {
+                    maven {
+                        name = 'staging'
+                        url = layout.buildDirectory.dir('staging-deploy')
+                    }
+                }
+            }
+        }
     }
 }
 
