--- a/.github/workflows/scalar.yml
+++ b/.github/workflows/scalar.yml
@@ -16,11 +16,11 @@ jobs:
     steps:
     - uses: actions/checkout@v6
 
-    - name: Set up JDK 1.8
+    - name: Set up JDK 21
       uses: actions/setup-java@v5
       with:
         distribution: 'temurin'
-        java-version: '8'
+        java-version: '21'
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v5
@@ -66,27 +66,22 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: '21'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
 
-      - name: Build
-        run: |
-          ./gradlew assemble
-          ./gradlew testJar
-
-      # due to a gradle bug we must run the integration test separately
       - name: Run integration tests
-        run: |
-          cd ledger
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceIntegrationTest
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" -Dscalardb.storage=jdbc -Dscalardb.contact_points=jdbc:mysql://localhost/ -Dscalardb.username=root -Dscalardb.password=mysql org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceEndToEndTest
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" -Dscalardb.storage=jdbc -Dscalardb.contact_points=jdbc:mysql://localhost/ -Dscalardb.username=root -Dscalardb.password=mysql org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceNamespaceEndToEndTest
+        run: >-
+          ./gradlew :ledger:integrationTest
+          -Dscalardb.storage=jdbc
+          -Dscalardb.contact_points=jdbc:mysql://localhost/
+          -Dscalardb.username=root
+          -Dscalardb.password=mysql
 
   integration-test-with-mysql-jdbc-transaction:
     name: Integration test with JDBC transaction manager on MySQL
@@ -103,26 +98,23 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: '21'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
 
-      - name: Build
-        run: |
-          ./gradlew assemble
-          ./gradlew testJar
-
-      # due to a gradle bug we must run the integration test separately
       - name: Run integration tests
-        run: |
-          cd ledger
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" -Dscalardb.storage=jdbc -Dscalardb.contact_points=jdbc:mysql://localhost/ -Dscalardb.username=root -Dscalardb.password=mysql -Dscalardb.transaction_manager=jdbc org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceEndToEndTest
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" -Dscalardb.storage=jdbc -Dscalardb.contact_points=jdbc:mysql://localhost/ -Dscalardb.username=root -Dscalardb.password=mysql -Dscalardb.transaction_manager=jdbc org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceNamespaceEndToEndTest
+        run: >-
+          ./gradlew :ledger:integrationTest
+          -Dscalardb.storage=jdbc
+          -Dscalardb.contact_points=jdbc:mysql://localhost/
+          -Dscalardb.username=root
+          -Dscalardb.password=mysql
+          -Dscalardb.transaction_manager=jdbc
 
   integration-test-for-generic-contracts:
     name: Integration test for generic contracts
@@ -139,11 +131,11 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: '21'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
@@ -206,11 +198,11 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: '21'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
@@ -273,11 +265,11 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: '21'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
@@ -332,11 +324,11 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: '21'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
@@ -344,13 +336,5 @@ jobs:
       - name: Prepare
         run: sudo mkdir -m 777 /var/log/scalar
 
-      - name: Build
-        run: |
-          ./gradlew assemble
-          ./gradlew testJar
-
-      # due to a gradle bug we must run the permission test separately
       - name: Run permission tests
-        run: |
-          cd ledger
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/permissionTest" org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServicePermissionTest
+        run: ./gradlew :ledger:permissionTest
