--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id("com.diffplug.spotless") version "6.13.0"
+    id("com.diffplug.spotless") version "8.1.0"
     id("org.jreleaser") version "1.21.0"
 }
 
@@ -21,6 +21,10 @@ subprojects {
 
     group = projectGroup
     project.version = projectVersion
+
+    jacoco {
+        toolVersion = '0.8.12'
+    }
 
     ext {
         grpcVersion = '1.79.0'
@@ -45,13 +49,12 @@ subprojects {
         mockitoVersion = '4.11.0'
         errorproneVersion = '2.10.0'
         errorproneJavacVersion = '9+181-r4173-1'
-        errorpronePluginVersion = '2.0.2'
+        errorpronePluginVersion = '4.4.0'
         spotbugsVersion = '4.8.6'
         spotbugsPluginVersion = '5.2.5'
         commonsTextVersion = '1.15.0'
         stefanbirknerSystemLambdaVersion = '1.2.1'
-        googleJavaFormatVersion = '1.7'
-        dockerPluginVersion = '0.34.0'
+        googleJavaFormatVersion = '1.33.0'
         bouncyCastleCryptoVersion = '1.70'
         partiqlVersion = '1.3.3'
 
@@ -84,15 +87,18 @@ subprojects {
         testImplementation group: 'org.mockito', name: 'mockito-inline', version: "${mockitoVersion}"
     }
 
-    test {
+    tasks.withType(Test) {
         maxHeapSize "512m"
         testLogging.showStandardStreams = true
 
         useJUnitPlatform()
     }
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(8)
+        }
+    }
 
     distZip {
         archiveFileName = "${project.name}.zip"
@@ -111,7 +117,7 @@ subprojects {
     }
 
     task javadocJar(type: Jar) {
-        classifier = 'javadoc'
+        archiveClassifier = 'javadoc'
         from javadoc
     }
 
